# LvglStudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  designer.cmd
locales/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/framework/: CMakeLists.txt  application.cpp  application.h
